# rufs-base-rust

./: Cargo.toml  README.md
src/: client.rs  data_store.rs  db_adapter_file.rs  db_adapter_postgres.rs  entity_manager.rs  lib.rs  main.rs  micro_service_server.rs  openapi.rs  request_filter.rs  rufs_micro_service.rs
