[package]
name = "rufs-base-rust"
version = "1.0.17"
authors = ["Alexsandro Stefenon <alexsandrostefenon@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[patch.crates-io]
# js-sys = { git = "https://github.com/71/wasm-bindgen", package = "js-sys" }
# wasm-bindgen = { git = "https://github.com/71/wasm-bindgen" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window', 'console'] }
wasm-bindgen-test = "0.3"
js-sys = "0.3"
serde-wasm-bindgen = "0.4.5"
web-log = "1.0.1"
idb = "0.6.4"
gloo-storage = "0.3.0"
tokio_with_wasm = { version = "0.8.7", features = ["rt","sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-postgres = {version = "0.7.7", features=[ "with-serde_json-1", "with-chrono-0_4" ], optional = true}
rsfbclient = {version="0.24.0", optional = true}
rsfbclient-core = {version="0.24.0", optional = true}
rust_decimal = { version = "1.23.1", features = [ "db-tokio-postgres" ], optional = true }
tide = { version = "0.16", optional = true }
warp = { version = "0.3", optional = true }
tide-websockets = { version = "0.4", optional = true }
tokio = { version = "1", features = ["full"] }

[dependencies]
lazy_static = "1.4.0"
chrono = { version = "0.4.26", features = ["alloc", "wasmbind", "serde"] }
reqwest = { version = "0.11.27", features = ["blocking", "json", "gzip"] }
#workflow-websocket = "0.3.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["preserve_order"] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"], optional = true }
async-recursion = "1.0.4"
async-trait = "0.1.77"
base64 = "0.13.0"
jsonwebtoken = "8.2.0"
regex = "1"
indexmap = "1.9.2"
openapiv3 = "1.0"
convert_case = "0.6"
# url = "2.5.0"
queryst = "2.1"
serde_qs = "0.12.0"
nested_qs = "0.1.2"
md5 = "0.7.0"
futures-util = { version = "0.3", default-features = false, features = ["sink"]  }
tokio-tungstenite-wasm = { version = "0.6.1", features = ["native-tls"] }

[features]
test-selelium = []
default = ["openapi"]
http_server = ["dep:async-std"]
tide = ["dep:tide", "dep:tide-websockets"]
warp = ["dep:warp"]
postgres = ["dep:tokio-postgres", "dep:rust_decimal"]
firebird = ["dep:rsfbclient", "dep:rsfbclient-core"]
openapi = []
client = []

[dependencies.getrandom]
version = "0.2.8"
features = [ 'js' ]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[package.metadata.wasm-pack.profile.dev]
# wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# debug-js-glue = true
# demangle-name-section = true
dwarf-debug-info = true
